hardware/lock/build/log/idf_py_stdout_output_76274
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/bjalki/files/bitcamp/KeylessCampus/build/bootloader/esp-idf/esptool_py && /home/bjalki/.espressif/python_env/idf5.4_py3.13_env/bin/python /home/bjalki/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/bjalki/files/bitcamp/KeylessCampus/build/bootloader/bootloader.bin
Bootloader binary size 0x6580 bytes. 0xa80 bytes (9%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/bjalki/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/bjalki/files/bitcamp/KeylessCampus/build/config -I/home/bjalki/esp/esp-idf/components/newlib/platform_include -I/home/bjalki/esp/esp-idf/components/freertos/config/include -I/home/bjalki/esp/esp-idf/components/freertos/config/include/freertos -I/home/bjalki/esp/esp-idf/components/freertos/config/xtensa/include -I/home/bjalki/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/bjalki/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/bjalki/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/bjalki/esp/esp-idf/components/freertos/esp_additions/include -I/home/bjalki/esp/esp-idf/components/esp_hw_support/include -I/home/bjalki/esp/esp-idf/components/esp_hw_support/include/soc -I/home/bjalki/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/bjalki/esp/esp-idf/components/esp_hw_support/dma/include -I/home/bjalki/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/bjalki/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/bjalki/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/bjalki/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/bjalki/esp/esp-idf/components/heap/include -I/home/bjalki/esp/esp-idf/components/heap/tlsf -I/home/bjalki/esp/esp-idf/components/log/include -I/home/bjalki/esp/esp-idf/components/soc/include -I/home/bjalki/esp/esp-idf/components/soc/esp32 -I/home/bjalki/esp/esp-idf/components/soc/esp32/include -I/home/bjalki/esp/esp-idf/components/soc/esp32/register -I/home/bjalki/esp/esp-idf/components/hal/platform_port/include -I/home/bjalki/esp/esp-idf/components/hal/esp32/include -I/home/bjalki/esp/esp-idf/components/hal/include -I/home/bjalki/esp/esp-idf/components/esp_rom/include -I/home/bjalki/esp/esp-idf/components/esp_rom/esp32/include -I/home/bjalki/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/bjalki/esp/esp-idf/components/esp_rom/esp32 -I/home/bjalki/esp/esp-idf/components/esp_common/include -I/home/bjalki/esp/esp-idf/components/esp_system/include -I/home/bjalki/esp/esp-idf/components/esp_system/port/soc -I/home/bjalki/esp/esp-idf/components/esp_system/port/include/private -I/home/bjalki/esp/esp-idf/components/xtensa/esp32/include -I/home/bjalki/esp/esp-idf/components/xtensa/include -I/home/bjalki/esp/esp-idf/components/xtensa/deprecated_include -I/home/bjalki/esp/esp-idf/components/lwip/include -I/home/bjalki/esp/esp-idf/components/lwip/include/apps -I/home/bjalki/esp/esp-idf/components/lwip/include/apps/sntp -I/home/bjalki/esp/esp-idf/components/lwip/lwip/src/include -I/home/bjalki/esp/esp-idf/components/lwip/port/include -I/home/bjalki/esp/esp-idf/components/lwip/port/freertos/include -I/home/bjalki/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/bjalki/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/bjalki/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/bjalki/esp/esp-idf/components/spi_flash/include -I/home/bjalki/esp/esp-idf/components/esp_wifi/include -I/home/bjalki/esp/esp-idf/components/esp_wifi/include/local -I/home/bjalki/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/bjalki/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/bjalki/esp/esp-idf/components/esp_event/include -I/home/bjalki/esp/esp-idf/components/esp_phy/include -I/home/bjalki/esp/esp-idf/components/esp_phy/esp32/include -I/home/bjalki/esp/esp-idf/components/esp_netif/include -I/home/bjalki/esp/esp-idf/components/nvs_flash/include -I/home/bjalki/esp/esp-idf/components/esp_partition/include -I/home/bjalki/esp/esp-idf/components/esp_driver_gpio/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/bjalki/files/bitcamp/KeylessCampus=. -fmacro-prefix-map=/home/bjalki/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/bjalki/files/bitcamp/KeylessCampus/main/main.c
/home/bjalki/files/bitcamp/KeylessCampus/main/main.c: In function 'connect_tcp_server':
/home/bjalki/files/bitcamp/KeylessCampus/main/main.c:199:14: warning: unused variable 'readBuffer' [-Wunused-variable]
  199 |         char readBuffer[1024] = {0};
      |              ^~~~~~~~~~
/home/bjalki/files/bitcamp/KeylessCampus/main/main.c:198:28: warning: variable 'serverInfo' set but not used [-Wunused-but-set-variable]
  198 |         struct sockaddr_in serverInfo = {0};
      |                            ^~~~~~~~~~
/home/bjalki/files/bitcamp/KeylessCampus/main/main.c:205:1: error: control reaches end of non-void function [-Werror=return-type]
  205 | }
      | ^
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
